Stop flash message close button flicker

--- a/static/styles/ui/messages.scss
+++ b/static/styles/ui/messages.scss
@@ -14,7 +14,7 @@
         background: $alizarin;
     }
     .close-button {
-        display: none;
+        visibility: hidden;
         cursor: pointer;
         float: right;
     }
